# SceneGL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile.sh  imgui.ini  notes
default_project/: models.txt
dependencies/imgui/examples/example_sdl_opengl3/: main.cpp
dependencies/tinyfiledialogs/: Makefile
example/: application.hpp  ass.cpp  colour.hpp  enable_if.cpp  graphics_original.hpp  input.h  keycode.h  la.h  linalg.cpp  mesh_data.h  model_load.hpp  scancode.h  timer.h  transform copy.hpp  transform.cpp  typecheck.h
include/: application.hpp  assertfunc.hpp  asset.hpp  asset_loader.hpp  asset_manager.hpp  camera.hpp  component.h  component.hpp  component.tpp  editor.hpp  entity.h  entity.hpp  entity.tpp  filepath.hpp  first_person.hpp  frame.hpp  frame_timer.hpp  gl_interface.hpp  graphics.hpp  image_interface.hpp  input.hpp  la.hpp  la_extended.hpp  light_direction.hpp  light_directional.hpp  light_point.hpp  material.hpp  mesh.hpp  mesh_renderer.hpp  model.hpp  model_loader.hpp  object.hpp  resource.hpp  resource_manager.hpp  scene.hpp  shader.hpp  shader_loader.hpp  shader_stage.hpp  texture.hpp  transform.hpp  (+1 more)
include/core/: Ngine.hpp  serializer.hpp  tick_timer.hpp  uuid.hpp
include/ecs/: asset.hpp  asset_loader.hpp  asset_manager.hpp  component.hpp  component.tpp  entity.hpp  entity.tpp  filepath.hpp  object.hpp  resource.hpp  resource_manager.hpp  scene.hpp  tai.hpp  transform.hpp
include/gui/: im_editor_camera.hpp  im_entity.hpp  im_scene.hpp  im_statistics.hpp  im_viewport.hpp  im_window.hpp
include/input/: input.hpp
include/ngine/: components.hpp  ngine.hpp  object.hpp  serializer.hpp
include/platform/opengl/: opengl.hpp  opengl_frame_buffer.hpp  opengl_material.hpp  opengl_mesh.hpp  opengl_shader.hpp  opengl_shader_source.hpp
include/renderer/: camera.hpp  components.hpp  context_manager.hpp  editor_camera.hpp  frame_buffer.hpp  gl_interface.hpp  graphics.hpp  image_interface.hpp  light_directional.hpp  light_point.hpp  material.hpp  mesh.hpp  mesh_renderer.hpp  model.hpp  model_loader.hpp  renderer.hpp  shader.hpp  shader_loader.hpp  shader_source.hpp  shader_stage.hpp  texture.hpp  window.hpp
include/runtime/: runtime_controller.hpp
include/scripting/: first_person.hpp
include/serializer/: serializer.hpp
include/tai/: tai.hpp
lib/: imgui.ini
marathon/assets/models/presets/: cone.gltf  cube.gltf  cube.mtl  ico_sphere.gltf  plane.gltf  prism.gltf
marathon/assets/scenes/: Default.json  Preset.json
marathon/assets/shaders/: base.frag  base.vert  colour.frag  lighting.frag  lighting.vert
marathon/include/: editor.hpp
marathon/include/core/: module.hpp
marathon/include/ecs/: asset.hpp  ngine.hpp
marathon/include/engine/: graphics_engine.hpp
marathon/include/gui/: im_editor_camera.hpp  im_entity.hpp  im_scene.hpp
marathon/include/ngine/: ngine.hpp
marathon/include/platform/opengl/: opengl.hpp  opengl_context.hpp  opengl_frame_buffer.hpp  opengl_material.hpp  opengl_mesh.hpp  opengl_renderer.hpp  opengl_shader.hpp  opengl_shader_source.hpp
marathon/include/renderer/: components.hpp  context.hpp  context_manager.hpp  editor_camera.hpp  frame_buffer.hpp  material.hpp  mesh.hpp  model_loader.hpp  renderer.hpp  renderer_api.hpp  shader.hpp  shader_loader.hpp  shader_source.hpp
marathon/include/runtime/: application.hpp  interactive.hpp  ioperator.hpp  operator.hpp  runtime.hpp  runtime_controller.hpp
marathon/include/serializer/: scene_serializer.hpp  serializer.hpp
marathon/include/window/: window.hpp
marathon/src/: main.cpp
marathon/src/ecs/: asset.cpp  ngine.cpp
marathon/src/platform/opengl/: opengl.cpp  opengl_context.cpp  opengl_frame_buffer.cpp  opengl_material.cpp  opengl_mesh.cpp  opengl_renderer.cpp  opengl_shader.cpp  opengl_shader_source.cpp
marathon/src/renderer/: context.cpp  frame_buffer.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  shader_source.cpp
marathon/src/window/: window.cpp
marathon/test/: ecs_test.cpp
models/presets/: cylinder.gltf  dome.gltf  ico_sphere.gltf  sphere.gltf
models/tools/: scale.mtl  translation.mtl
resources/: models.txt
scene/: Default.json  Default.scene  Preset.json  Preset.scene  Test.json  Test.scene  scn.scene
scene/Test/dome/: dome.mtl
shaders/: base.fs  base.vert  base.vs  cool.fs  full.frag  full.vert  lighting.frag  lighting.fs  lighting.vert  lighting.vs  normal.frag  normal.vs  super-cool.fs  texture.fs  texture.vert  wireframe.fs  wireframe.vs
spectator/include/: editor.hpp
spectator/include/gui/: im_editor_camera.hpp  im_entity.hpp  im_scene_tree.hpp  im_statistics.hpp  im_viewport.hpp
spectator/src/: main.cpp
sprinter/include/: first_person_camera.hpp  runtime.hpp  sprinter.hpp
sprinter/src/: main.cpp  sprinter.cpp
src/: component.cpp  entity.cpp  input.cpp  main.cpp  mesh.cpp  object.cpp  resource.cpp  shader.cpp  shader_stage.cpp
src/ecs/: component.cpp  entity.cpp  object.cpp  resource.cpp
src/renderer/: input.cpp  mesh.cpp  shader.cpp  shader_stage.cpp
test/: a.out  ecs_test.cpp  error_test.cpp  imguizmo_test.cpp  la_test.cpp  mesh_test.cpp  sdl2_sample.cpp  sdl2_test.cpp  vec_size.cpp  vector_ref.cpp
